# dawsync

./: CMakeLists.txt  README.md
plugin/: CMakeLists.txt
plugin/resource/: plugin_editor.uidesc
plugin/source/glue/: stem.hpp  transport.cpp  transport.hpp
plugin/source/plugin/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
resource/: plugin_editor.uidesc  win32resource.rc
source/glue/: transport.cpp
source/plugin/: cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  version.h
